2009-05-19  Tobias C. Rittweiler  <tcr@freebits.de>

	* slime.el (sldb-restartable-frame-line-face): Set a default value.
	(sldb-frame-restartable-p): New.
	(sldb-compute-frame-face): Use it.
	(sldb-show-frame-details): Use it, too.

2009-05-19  Nikodemus Siivola  <nikodemus@random-state.net>

	* swank-source-path-parser.lisp (read-and-record-source-map):
	ignore errors during the call to READ, so that we don't the
	current version of the form we are looking at contains eg.
	uninternable symbols.

2009-05-19  Helmut Eller  <heller@common-lisp.net>

	* swank-openmcl.lisp (source-note-to-source-location): Always
	test *temp-file-map* first, because the temp-file might actually
	exist during compilation but no longer when Emacs tries to open
	it.
	(slime-goto-location-buffer): Don't create buffers for
	non-existent files.

2009-05-18  Nikodemus Siivola  <nikodemus@random-state.net>

	* slime.el (slime-description-autofocus): New variable.
	(slime-show-description): Use it to decide if description
	buffers should receive focus automatically.
	* doc/slime.texi: Document it.

2009-05-17  Tobias C. Rittweiler  <tcr@freebits.de>

	* slime.el (slime-dispatch-event): New event
	`:read-from-minibuffer'.
	(slime-read-from-minibuffer-for-swank): New.

	* swank.lisp (dispatch-event): Pass through :read-from-minibuffer
	event.
	(read-from-minibuffer-in-emacs): Now uses new event rather than
	eval-in-emacs.

2009-05-17  Helmut Eller  <heller@common-lisp.net>

	* swank-openmcl.lisp (compile-temp-file): Remove backward
	compatibility code.
	(eval-in-frame, frame-source-location-for-emacs)
	(return-from-frame, restart-frame)
	(disassemble-frame, xref-locations): Simplify.
	(list-callers): Use ccl::caller-functions which gives us more precise
	src-locs than ccl::callers.
	(canonicalize-location, remove-filename-quoting)
	(maybe-method-location): Deleted.  No longer used.
	(who-specializes): Simplify.

2009-05-17  Helmut Eller  <heller@common-lisp.net>
